# PhyloSkills

./: .gitignore  README.md  pyproject.toml
mcp/: server.py
project-template/: .gitignore  CLAUDE.md
project-template/executables/: software-inventory.md
project-template/reports/: pipeline-status.md
scripts/alignment/: align_markers.sh  snp_density_scan.py
scripts/assembly/: assemble_plastome_bwa.sh  assemble_plastome_getorganelle.sh
scripts/data/: assemble_and_extract.sh  download_genbank.sh  download_sra.sh  extract_gene_from_gb.py  extract_markers_blast.py  find_sra_gaps.py  fix_plastome_contamination.py  merge_sra_cds_to_planB.py  select_best_accession.py
scripts/inference/: build_gene_trees.sh  run_aster.sh
scripts/manuscript/: fig_caption_gen.py  methods_gen.py
scripts/utils/: provenance.sh  provenance_py.py  revise_hybpiper_sequences.py
skills/alignment/: SKILL.md
skills/assembly/: SKILL.md
skills/data-acquisition/: SKILL.md
skills/debug/: SKILL.md
skills/environment/: SKILL.md
skills/manuscript/: SKILL.md
skills/model-selection/: SKILL.md
skills/phylo-alignment/: SKILL.md
skills/phylo-assemble/: SKILL.md
skills/phylo-data-acquisition/: SKILL.md
skills/phylo-debug/: SKILL.md
skills/phylo-environment/: SKILL.md
skills/phylo-model-selection/: SKILL.md
skills/phylo-research-design/: SKILL.md
skills/phylo-tree-inference/: SKILL.md
skills/phylo-visualization/: SKILL.md
skills/phylogenetic-analysis/: SKILL.md
skills/pipeline/: SKILL.md
skills/research-design/: SKILL.md
skills/tree-inference/: SKILL.md
(+16 files in other folders)
