[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "phyloskills"
version = "0.1.0"
description = "MCP server and pipeline scripts for AI-assisted phylogenetic research"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff",
]

[project.scripts]
phyloskills-mcp = "mcp.server:mcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp*"]

[tool.ruff]
line-length = 100
target-version = "py310"
